--- a/package.json
+++ b/package.json
@@ -37,6 +37,10 @@
       ],
       "dest": "public/build/ui",
       "manifestFile": "public/build/manifest.json"
+    },
+    "webfonts": {
+      "src": "source/webfonts/**/*",
+      "dest": "public/ui/webfonts"
     }
   },
   "tasks": {
@@ -45,7 +49,8 @@
       "html",
       "icons",
       "js",
-      "stylus"
+      "stylus",
+      "webfonts"
     ],
     "default": [
       "html",
