--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "start": "webpack-dev-server --open"
   },
   "devDependencies": {
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
     "style-loader": "^0.23.1",
