--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "not dead"
   ],
   "devDependencies": {
+    "autoprefixer": "^9.6.1",
     "@babel/core": "^7.5.0",
     "@babel/preset-env": "^7.5.0",
     "babel-loader": "^8.0.6",
@@ -28,6 +29,7 @@
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
@@ -36,9 +38,5 @@
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2",
     "webpack-merge": "^4.2.1"
-  },
-  "dependencies": {
-    "autoprefixer": "^9.6.1",
-    "postcss-loader": "^3.0.0"
   }
 }
