--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "postcss": {
     "plugins": {
-      "autoprefixer": {}
+      "autoprefixer": {},
+      "cssnano": {}
     }
   },
   "browserslist": [
@@ -29,6 +30,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^3.0.0",
+    "cssnano": "^4.1.10",
     "dotenv-webpack": "^1.7.0",
     "fastclick": "^1.0.6",
     "file-loader": "^4.0.0",
