--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     "iOS >= 9",
     "not dead"
   ],
+  "dependencies": {
+    "@types/fastclick": "^1.0.28",
+    "fastclick": "^1.0.6"
+  },
   "devDependencies": {
     "@babel/core": "^7.5.0",
     "@babel/plugin-proposal-class-properties": "^7.4.0",
@@ -28,7 +32,6 @@
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.0",
     "@babel/preset-typescript": "^7.3.3",
-    "@types/fastclick": "^1.0.28",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-transform-regenerator": "^6.26.0",
@@ -37,7 +40,6 @@
     "css-loader": "^3.0.0",
     "cssnano": "^4.1.10",
     "dotenv-webpack": "^1.7.0",
-    "fastclick": "^1.0.6",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
     "postcss-loader": "^3.0.0",
