--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "UNLICENSED",
   "repository": "https://github.com/bgauslin/clock",
   "scripts": {
-    "dev": "webpack-dev-server --open --config webpack.dev.js",
+    "test": "webpack-dev-server --open --config webpack.dev.js",
     "start": "http-server dist",
     "build": "webpack --config webpack.prod.js"
   },
