flattens, reorganizes, renames project folders (no-op)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,9 @@
   ],
   "files": [
     "src/js/index.ts",
-    "src/js/components/app/app.ts",
-    "src/js/components/faces/faces.ts",
-    "src/js/components/settings/settings.ts",
-    "src/js/components/touch.ts"
+    "src/js/app.ts",
+    "src/js/faces.ts",
+    "src/js/settings.ts",
+    "src/js/touch.ts"
   ]
 }
