--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "build": "webpack --config webpack.prod.js"
   },
   "dependencies": {
+    "lit": "^2.3.1"
+  },
+  "devDependencies": {
     "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
-    "lit": "^2.3.1",
     "lit-css-loader": "^2.0.0",
     "mini-css-extract-plugin": "^2.6.1",
     "sass": "^1.55.0",
